--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,4 @@
 *.dvi filter=lfs diff=lfs merge=lfs -text
 *.log filter=lfs diff=lfs merge=lfs -text
 *.webp filter=lfs diff=lfs merge=lfs -text
+*.gz filter=lfs diff=lfs merge=lfs -text
